# hierarchical-structure-analysis

./: test_recognize_chord.py
pattern_analyzer/: CMakeLists.txt  batch_analyze.sh  main.cpp  print_output.py
preprocessing/exported_midi_chord_recognition/: midi_chord.py
